# Chord_AI

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deployment.yml
app/: main.py
app/chain/: CautionMenuStrategy.py  DangerMenuStrategy.py  HighMarginMenuStrategy.py  chains.py  guide_pipeline.py  response_schema.py
app/core/: config.py  exception_handler.py  middleware.py
app/crud/: insight.py  menu.py  user.py
app/db/: deps.py  session.py
app/models/: catalog.py  insight.py  user.py
app/schemas/: prompt_data.py
app/services/: strategy_service.py
app/util/: calculator.py
chain/: chains.py  response_schema.py
core/: base_response.py  exception_handler.py  guide_pipeline.py  middleware.py
crud/: insight.py  menu.py  user.py
db/: deps.py  session.py
models/: catalog_models.py  insight_models.py  user_models.py
schemas/: guide.py
services/: strategy_service.py
tests/: test_config.py
util/: date_util.py  parser.py  prompt_generator.py
